# TaoKt

./: README.md  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/jvmMain/kotlin/io/github/kdroidfilter/taokt/: App.kt  Greeting.kt  Platform.kt  main.kt
gradle/: libs.versions.toml
taokt/: Cargo.toml  build.gradle.kts
taokt-examples/: build.gradle.kts
taokt-examples-native/: build.gradle.kts
taokt-examples-native/src/commonMain/kotlin/io/github/kdroidfilter/taokt/examples/: Examples.kt  Main.kt  Platform.kt
taokt-examples-native/src/nativeMain/kotlin/io/github/kdroidfilter/taokt/examples/: Platform.kt
taokt-examples/src/main/kotlin/io/github/kdroidfilter/taokt/examples/: Examples.kt  Main.kt
taokt-examples/src/main/resources/macos/: Info.plist
taokt/src/main/rust/: app.rs  events.rs  graphics.rs  icon.rs  lib.rs  monitor.rs  tests.rs  types.rs  window.rs
